# eDB

./: .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: auto-assign.yml  book-build.yml  ci.yml  deploy-pages.yml  nightly.yml  release.yml  scorecard.yml  video-build.yml  weekly.yml
docs/book/: book.md  references.bib
docs/site/: index.html
examples/: quickstart.py
promo/: generate_audio.py  promo_scene.py
src/__tests__/: smoke.test.tsx
src/edb/: cli.py  config.py
src/edb/api/: app.py  dependencies.py  middleware.py
src/edb/api/routes/: auth.py  documents.py  graph.py  kv.py  sql.py
src/edb/auth/: jwt_handler.py  models.py  token_blacklist.py  users.py
src/edb/ebot/: llm_translator.py  models.py  translator.py
src/edb/query/: models.py  parser.py  planner.py
src/edb/security/: audit.py  encryption.py  input_validation.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_encryption.py  test_fts.py  test_input_validation.py  test_parser.py  test_planner.py
