[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edb"
version = "3.0.1"
description = "eDB: Unified Multi-Model Database Ecosystem"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "eDB Contributors"},
]
keywords = ["database", "multi-model", "embedded", "sql", "nosql", "key-value"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.47.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
ebot = [
    "openai>=1.12.0",
]

[project.scripts]
edb = "edb.cli:main"

[project.urls]
Homepage = "https://github.com/embeddedos-org/eDB"
Documentation = "https://github.com/embeddedos-org/eDB/tree/main/docs"
Repository = "https://github.com/embeddedos-org/eDB"
Issues = "https://github.com/embeddedos-org/eDB/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=edb --cov-report=term-missing"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
